Fixed banner overlap issue

--- a/src/components/landing/Banner.less
+++ b/src/components/landing/Banner.less
@@ -2,7 +2,7 @@
 	position: relative;
 	min-height: 485px;
 	max-height: 650px;
-	height: 90vh;
+	height: 80vh;
 	text-align: center;
 	margin-bottom: 5em;
 
@@ -71,6 +71,12 @@
 			margin-top: 15px;
 			margin-bottom: 10px;
 		}
+	}
+}
+
+@media all and (min-width: 1200px) {
+	.site-banner {
+		min-height: 600px;
 	}
 }
 
